--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "radi-raaza-meta-spa",
+  "name": "ngs-augment-list",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,13 +10,13 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.4.8",
     "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "tailwindcss": "^3.4.14",
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.13"
   }
 }
